--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,16 @@
 {
     "version": 2,
-    "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "/api"
-        }
+    "builds": [
+     {
+      "src": "index.js",
+      "use": "@vercel/node",
+      "config": { "includeFiles": ["dist/**"] }
+     }
+    ],
+    "routes": [
+     {
+      "src": "/(.*)",
+      "dest": "app.js"
+     }
     ]
-}
+   }
