--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,15 @@
 {
-    "version": 2,
-    "builds": [
-     {
-      "src": "index.js",
-      "use": "@vercel/node",
-      "config": { "includeFiles": ["dist/**"] }
-     }
-    ],
-    "routes": [
-     {
+  "version": 2,
+  "builds": [
+    {
+      "src": "src/index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
       "src": "/(.*)",
-      "dest": "index.js"
-     }
-    ]
-   }
+      "dest": "src/index.js"
+    }
+  ]
+}
